minor style updates

--- a/app/views/admin/about.html.erb
+++ b/app/views/admin/about.html.erb
@@ -239,7 +239,7 @@ end
             </div>
 
             <div class="row">
-              <div class="col-sm-4">
+              <div class="col-sm-6">
                 <h2>Limitations</h2>
                 <p>We picked Facebook likes to classify a user mostly because it is convenient &mdash; there is minimal effort required for the user. You sign in with a single click and the rest is automatic. You don't have to fill out a survey or even enter search terms. The results are presented to you as painlessly as possible. So far, we've found Facebook likes to be a reasonable approximation to classify users, but there are better ways and we recognize the limitations of this method. So to help strike a better balance between accuracy and convenience, we wanted to include a system that takes user feedback to improves our recommendations. 
 
@@ -248,20 +248,18 @@ end
                 </center>
               </div>
 
-              <div class="col-sm-4">
+              <div class="col-sm-6">
                 <h2>The user's profile</h2>
               <p>Since we are recording both positive and negative feedback, we built an interface for users to take a look through the projects they have liked. This means that they can browse through some recommendations, rate them up or down, and then come back later to see what they've liked. If you're looking for a Kickstarter project to back, this can really help a lot. 
               </p>
               <p>We also allow our users to "follow" the Kickstarter users from our database that we identify as most similar to them. We thought that maybe if you find someone who has backed a lot of projects that you find interesting, you could keep track of them and know when they've backed something new. The feature as currently implemented is mostly a demonstration rather than a functional tool. </p>
                 <p style="padding-top:50px"><center><i class="icon-star iconBig"></i></center></p>
               </div>
-              <div class="col-sm-4">
-                <h2>summary?</h2>
-              </div>
-              <div class="col-sm-4">
+
+              <div class="col-sm-6 pull-right">
                 <h2>About Us</h2>
-                <p>We're students at the <%= link_to "Flatiron School", "http://www.flatironschool.com"%> in New York City. Three months ago we had never coded in Ruby.</p>
-                <p>We had a lot of fun building this. Let us know what you think.</p><p class="pull-right"><%= link_to "Joe", "http://www.twitter.com/jnoconor"%> and <%= link_to "Michael", "http://www.twitter.com/mpolycar" %></p>
+                <p>We're students at the <%= link_to "Flatiron School", "http://www.flatironschool.com"%> in New York City.
+                We had a lot of fun building this. Let us know what you think.</p><p class="pull-right"><%= link_to "Joe", "http://www.twitter.com/jnoconor"%> and <%= link_to "Michael", "http://www.twitter.com/mpolycar" %></p>
                 </div>
               </div>
             </div>
