--- a/app/views/recommendations/index.html.erb
+++ b/app/views/recommendations/index.html.erb
@@ -19,12 +19,13 @@
         <% @active_recs.take(2).each_with_index do |rec, i| %>
         <div class="col-md-4 col-sm-6 column-<%=i%>">
           <article class="boxFeature-2">
-            <section class="imgWrapper "><a href="http://www.kickstarter.com<%= rec.ks_project.url %>" target="_blank"><%= image_tag "#{rec.ks_project.image_url}", class: "img-responsive rec-image" %></a>
+            <section class="imgWrapper "><a href="http://www.kickstarter.com<%= rec.ks_project.url %>" target="_blank"><%= image_tag "#{rec.ks_project.image_url}", class: "img-responsive rec-image"%></a>
             </section>
             <h2 class="rec-title"><%= link_to rec.ks_project.title, "http://www.kickstarter.com" + rec.ks_project.url, target: '_blank' %></h2>
 <!-- descriptions --> 
             <div class="description">
             <p class="project-description">"<%= rec.ks_project.description %>"</p>
+            <% if !rec.ks_project.video_url.nil? %><a href="#" data-toggle="modal" data-target="#video-modal-<%=rec.ks_project.id%>">(video)</a><% end %>
             </div>
   <! -- ratings -->
             <div class="ratings" align="center">
@@ -40,6 +41,24 @@
             </div>
           </article>
         </div>
+<!-- video modal -->
+<div class="modal fade video-modal" id="video-modal-<%=rec.ks_project.id%>" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+
+      </div>
+      <div class="modal-body">
+        <video controls width="100%">
+          <source src="<%= rec.ks_project.video_url%>" type="video/mp4">
+        </video>
+      </div>
+
+    </div><!-- /.modal-content -->
+  </div><!-- /.modal-dialog -->
+</div><!-- /.modal -->
+
         <% end %>
 <!-- a random pick --> 
         <div class="col-md-4 col-sm-6 column-3">
@@ -50,6 +69,7 @@
             <h2 class="rec-title"><%= link_to @random.title, "http://www.kickstarter.com" + @random.url, target: '_blank' %></h2>
             <div class="description">
             <p class="project-description">"<%= @random.description %>"</p>
+            <% if !@random.video_url.nil? %><a href="#" data-toggle="modal" data-target="#video-modal-<%=@random.id%>">(video)</a><% end %>
             </div>
             <div class="ratings" align="center">
             <%= form_tag adjust_score_path, id: "form-3", class: "rate" do %>
@@ -64,6 +84,24 @@
           </article>
         </div>
         <% end %>
+<!-- video modal for 3rd pick -->
+<div class="modal fadeIn video-modal" id="video-modal-<%=@random.id%>" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+
+      </div>
+      <div class="modal-body">
+        <video controls width="100%">
+          <source src="<%= @random.video_url%>" type="video/mp4">
+        </video>
+      </div>
+
+    </div><!-- /.modal-content -->
+  </div><!-- /.modal-dialog -->
+</div><!-- /.modal -->
+
       </div>
     </div>
   </section>
@@ -135,6 +173,7 @@
 
 <!-- content -->
 
+
 </div>
 <!-- global wrapper -->
 </body>
@@ -154,6 +193,14 @@
     $('input:radio').hide();
     $('input:submit.hide').hide();
 
+    // kill video -- can't come up with a better way to do this
+    $('body').click(function(){
+      $('video')[0].pause();
+      $('video')[1].pause();
+      $('video')[2].pause();
+      });
+
+    // post ratings
     $('label.thumbs').click(function(event){
       var $form = $(this).parent();
       var $inputs = $form.find('input');
