latest db (cleaned and prepped), minor adjustment to splash page (get started button), more helpful rescue in still_active? method

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -97,7 +97,7 @@
             </li>
           </ul>
         </div> 
-        <% unless @user %><a href="/auth/facebook" id="fb" class="homeBtn btn"><i class="icon-facebook-1">Login with Facebook</i></a><% end %>
+        <% unless @user %><a href="#start" class="homeBtn btn"><i class="icon-down">Get Started</i></a><% end %>
       </div>
     </div>
   </section>
