ensure footer is the same

--- a/app/views/admin/about.html.erb
+++ b/app/views/admin/about.html.erb
@@ -352,6 +352,7 @@ end
           <div class="footerWidget pull-left">
 
             <h3>  Made with <%= image_tag "brain-xxl.png", size: "20x20"%> by <a href="http://www.twitter.com/jnoconor">@jnoconor</a> and <a href="http://www.twitter.com/mpolycar">@mpolycar</a> in NYC.</h3>
+            <h3 class="tips" data-original-title="If you're from Kickstarter, we're sorry we've been scraping your site, though we bet your servers enjoyed the exercise. :-)">Not affiliated with Kickstarter in any way, just fans.</h3>
           </div>
         </div>
         <div class="col-xs-4" align="center">
