fix sharing links

--- a/app/views/admin/about.html.erb
+++ b/app/views/admin/about.html.erb
@@ -58,7 +58,7 @@
         </div>
         <div class="collapse navbar-collapse navbar-ex1-collapse" id="scrollTarget">
                         <!-- AddThis Button BEGIN -->
-              <div class="addthis_toolbox addthis_default_style addthis_32x32_style pull-right" addthis:url="http://www.kickammender.com" style="display:inline-block">
+              <div class="addthis_toolbox addthis_default_style addthis_32x32_style pull-right" addthis:url="http://kickammender.com" style="display:inline-block">
               <ul class="socialNetwork">
               <li><a class="addthis_button_facebook tips" data-original-title="share this on Facebook"></a></li>
               <li><a class="addthis_button_twitter tips" data-original-title="share this on Twitter"></a></li>
@@ -365,7 +365,7 @@ end
 
             <h3>Think it's cool?</h3>
             <!-- AddThis Button BEGIN -->
-              <div class="addthis_toolbox addthis_default_style addthis_32x32_style" addthis:url="http://www.kickammender.com">
+              <div class="addthis_toolbox addthis_default_style addthis_32x32_style" addthis:url="http://kickammender.com">
               <ul class="socialNetwork">
               <li><a class="addthis_button_facebook tips" data-original-title="share this on Facebook"></a></li>
               <li><a class="addthis_button_twitter tips" data-original-title="share this on Twitter"></a></li>
