--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -214,7 +214,7 @@
         </div>
         <div class="col-xs-4" align="center">
             <h3>Curious about how this works?</h3>
-            <a class="btn" href="/about#about">Find out</a>
+            <a class="btn" href="/about">Find out</a>
         </div>
 
         <div class="col-xs-4 pull-right">
